added cmake example, updated readme for setting up the project in non-vs ide (like clion)

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 # build
 .build/*
 x64/*
+cmake-build-debug/*
+cmake-build-debug-visual-studio/*
+# ignore CMakeLists.txt but add example file
+CMakeLists.txt
 # dlls:
 *.dll
 # vs-like objects
