--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@ x64/*
 cmake-build-debug/*
 cmake-build-debug-visual-studio/*
 # ignore CMakeLists.txt but add example file
-CMakeLists.txt
 # dlls:
 *.dll
 # vs-like objects
@@ -15,3 +14,5 @@ CMakeLists.txt
 *vcxproj*
 packages.config
 packages/*
+
+build
